k8s/partial/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: workloads
  labels:
    kubernetes.io/metadata.name: workloads
    istio.io/dataplane-mode: ambient
    istio.io/use-waypoint: waypoint-private
