k8s/partial/05-services.yaml
apiVersion: v1
kind: Service
metadata:
  name: login-handler-service
  namespace: workloads
  labels:
    app: login-handler-app
    istio.io/use-waypoint: waypoint-private
spec:
  type: ClusterIP
  selector:
    app: login-handler-app
  ports:
  - name: http
    protocol: TCP
    port: 80
    targetPort: 8000
---
apiVersion: v1
kind: Service
metadata:
  name: hospedajes-service
  namespace: workloads
  labels:
    app: hospedajes-app
    istio.io/use-waypoint: waypoint-private
spec:
  type: ClusterIP
  selector:
    app: hospedajes-app
  ports:
  - name: http
    protocol: TCP
    port: 80
    targetPort: 8003
---
apiVersion: v1
kind: Service
metadata:
  name: users-service
  namespace: workloads
  labels:
    app: users-app
    istio.io/use-waypoint: waypoint-private
spec:
  type: ClusterIP
  selector:
    app: users-app
  ports:
  - name: http
    protocol: TCP
    port: 80
    targetPort: 8000
