k8s/partial/06-destination-rules.yaml
apiVersion: networking.istio.io/v1
kind: DestinationRule
metadata:
  name: login-handler-dr
  namespace: workloads
spec:
  host: login-handler-service.workloads.svc.cluster.local
  trafficPolicy:
    connectionPool:
      tcp:
        maxConnections: 800
      http:
        h2UpgradePolicy: DEFAULT
        http1MaxPendingRequests: 500
        http2MaxRequests: 1000
        maxRequestsPerConnection: 10
        maxRetries: 3
    outlierDetection:
      consecutive5xxErrors: 3
      interval: 5s
      baseEjectionTime: 30s
      maxEjectionPercent: 50
---
apiVersion: networking.istio.io/v1
kind: DestinationRule
metadata:
  name: users-dr
  namespace: workloads
spec:
  host: users-service.workloads.svc.cluster.local
  trafficPolicy:
    connectionPool:
      tcp:
        maxConnections: 800
      http:
        h2UpgradePolicy: DEFAULT
        http1MaxPendingRequests: 500
        http2MaxRequests: 800
        maxRequestsPerConnection: 10
        maxRetries: 3
    outlierDetection:
      consecutive5xxErrors: 3
      interval: 5s
      baseEjectionTime: 30s
      maxEjectionPercent: 50
  subsets:
  - name: v1
    labels:
      version: v1
