k8s/partial/07-http-routes.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: login-handler-route
  namespace: workloads
spec:
  parentRefs:
  - name: travelhub-gateway
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /login-handler
    filters:
    - type: URLRewrite
      urlRewrite:
        path:
          type: ReplacePrefixMatch
          replacePrefixMatch: /
    - type: ResponseHeaderModifier
      responseHeaderModifier:
        add:
        - name: x-travelhub-header
          value: login-handler-service
    backendRefs:
    - name: login-handler-service
      port: 80
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: hospedajes-route
  namespace: workloads
spec:
  parentRefs:
  - name: travelhub-gateway
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /hospedajes
    filters:
    - type: URLRewrite
      urlRewrite:
        path:
          type: ReplacePrefixMatch
          replacePrefixMatch: /
    - type: ResponseHeaderModifier
      responseHeaderModifier:
        add:
        - name: x-travelhub-header
          value: hospedajes-service
    backendRefs:
    - name: hospedajes-service
      port: 80
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: users-route
  namespace: workloads
spec:
  parentRefs:
  - name: travelhub-gateway
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /users
    filters:
    - type: URLRewrite
      urlRewrite:
        path:
          type: ReplacePrefixMatch
          replacePrefixMatch: /
    - type: ResponseHeaderModifier
      responseHeaderModifier:
        add:
        - name: x-travelhub-header
          value: users-service
    backendRefs:
    - name: users-service
      port: 80
